# QwenPaw

./: .coverage  .coveragerc-s-a-only  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG  CONTRIBUTING.md  CONTRIBUTING_zh.md  DEPLOYMENT.md  DEVELOPMENT.md  DEV_BRANCHING_SOP.md  DEV_BRANCHING_SOP_zh.md  ENHANCEMENTS_PROGRESS.md  EVENT_STREAM_FIX.md  Makefile  PR_DESCRIPTION.md  PR_DESCRIPTION_EN.md  PR_DESCRIPTION_ZH.md  PR_INTERRUPT.md  PR_INTERRUPT_EN.md  PR_SUBMIT_GUIDE.md  PR_SUMMARY.md  README.md  README_fr.md  README_ja.md  README_ru.md  README_zh.md  RELEASE_NOTE_v0.1.0_zh.md  SECURITY.md  SERVICE_CLASS_NONE_START_METHOD_FIX.md  SERVICE_REUSE_POST_INIT_FIX.md  TAURI_APP.md  build-x86.sh  changes.diff  channel_test_analysis.md  commit_fix.sh  (+15 more)
.auto-pr/: issue.json  target-repo.txt
.github/: PULL_REQUEST_TEMPLATE.md
.sisyphus/: boulder.json
assets/: Docs-B8m7eKBb.js  Docs-BHKtdbaz.js  Docs-BYYerdPq.js  Docs-BlmmpGWk.js  Docs-Bn8olXt9.js  Docs-CV4V0Q1l.js  Docs-DGadRXdt.js  Docs-DsUClVAC.js  Docs-wpEl3j-R.js  Downloads-ASOz64oU.js  Downloads-B32XxBpR.js  Downloads-BiC93Q_v.js  Downloads-BikhlOCd.js  Downloads-Cj0R2Cmu.js  Downloads-DUkCTGix.js  Downloads-DW4Le3XH.js  Downloads-DnrYT69S.js  Downloads-RA5LIrEw.js  ReleaseNotes-CC-Pmx9J.js  ReleaseNotes-CIiG-VBF.js  ReleaseNotes-CShc6VnO.js  ReleaseNotes-D8WUrYWP.js  ReleaseNotes-DEERD6Ez.js  ReleaseNotes-DFG8bBnN.js  ReleaseNotes-Dxzr3S14.js  ReleaseNotes-ZM9EIlge.js  ReleaseNotes-n9uyy24b.js  chevron-down-B32yteYU.js  chevron-down-BTKKpGRy.js  chevron-down-CuEsZY9n.js  chevron-down-D51-H0oi.js  chevron-down-DA43wfz0.js  chevron-down-Dx5DsCAS.js  chevron-down-LDPOPoot.js  chevron-down-Sadb4N5Y.js  chevron-down-r60-0rb0.js  file-text-B3lK7FFG.js  file-text-B4gkedpo.js  file-text-B9ZVM-ec.js  file-text-BbnwJTPE.js  (+44 more)
console/: .env.development.example  .env.example  .prettierignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite-plugin-patchable.ts  vite.config.ts  vitest.config.ts
deploy/: DEPLOY.md  Dockerfile  Dockerfile.k8s  copaw-agent.yaml  entrypoint.sh
docs/: BRANDING_AND_COMPAT.md  channel-testing-guide.md  custom-channel-http-routes.md  interrupt_feature.md  meeting-discussion.md  meeting-notes-concise.md  multi-agent-protocol.zh.md  service_zh.md
e2e/: conftest.py
electron/: README.md  builder.yml  error.html  main.js  package-lock.json  package.json.bak  preload.js
memory/: session.md
nginx/: nginx.conf  nginx.dev-local.conf
plans/: openrouter_enhancement_plan.md
pp-ai-file/: AGENTS.md  session_infer_api_logic.md
scripts/: README.md  backend-dev.sh  backend-restore.sh  check-channels.sh  check-sync-status.sh  check_channel_contracts.py  copaw.service  copawd.sh  dev-start.sh  dev-stop.sh  dev_electron.sh  docker_build.sh  docker_push_to_private_docker_hub.sh  docker_sync_latest.sh  generate-nginx-config.sh  health-check.sh  install.bat  install.ps1  install.sh  local_embedding_server.py  manage-copawd.sh  resolve-conflicts.sh  run_tests.py  setup-cron.sh  setup-supabase-auth.sh  source_one_click_start.sh  start_electron_dev.ps1  start_electron_dev.sh  sync-upstream.sh  test_chunk_prompt.py  test_copaw_e2b.sh  update-copaw.sh  validate_skill.py  verify-build.sh  verify-install.sh  wheel_build.ps1  wheel_build.sh
tasks/: todo.md
tests/: conftest.py  test_auth_middleware.py  test_base_channel_dedup.py  test_cases_copaw_full(1).opml  test_channel_media_flow.py  test_channel_media_utils.py  test_channel_registry.py  test_cli_version.py  test_config_watcher_hot_reload.py  test_console_push_store.py  test_dingtalk_dedup.py  test_dingtalk_handler.py  test_feishu_webhook.py  test_hint_injection.py  test_image_understanding.py  test_llm_resilience.py  test_llm_routing.py  test_local_models_manager.py  test_mcp_resilience.py  test_mcp_transport.py  test_memory_compaction_hook.py  test_model_factory_empty_text_blocks.py  test_model_factory_message_normalization.py  test_model_factory_openrouter.py  test_model_factory_session_affinity.py  test_ollama_manager_timeout.py  (+22 more)
(+2790 files in other folders)
